--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>FizzBuzz</title>
   </head>
   <body>
+    <div>
+      <h1>FizzBuzz</h1>
+    </div>
     <script src="./js/main.js"></script>
   </body>
 </html>
