--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
     <div>
       <h1>FizzBuzz</h1>
+      <p id="output-message">....</p>
     </div>
     <script src="./js/main.js"></script>
   </body>
